<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.controller.MainActivity">

    <TextView
        android:id="@+id/TWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/TInEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/TInPassword"
        app:layout_constraintTop_toBottomOf="@+id/TInPassword" />

    <Button
        android:id="@+id/BSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#00EC3737"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/TInPassword"
        app:layout_constraintTop_toBottomOf="@+id/TInPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TInEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TInPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TInEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/TError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrongIds"
        android:textColor="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/TInEmail"
        app:layout_constraintEnd_toEndOf="@+id/TInEmail"
        app:layout_constraintStart_toStartOf="@+id/TInEmail"
        app:layout_constraintTop_toBottomOf="@+id/TWelcome" />

    <Button
        android:id="@+id/BForogotPassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgotPassword"
        app:layout_constraintEnd_toEndOf="@+id/TInPassword"
        app:layout_constraintStart_toStartOf="@+id/TInPassword"
        app:layout_constraintTop_toBottomOf="@+id/TInPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>